Build fix for changing repos.
Some modules changes content after perl Makefile.PL (Text::Xslate as example).
We need tar.gz with this changes, otherwise build fails.
So, we create tar.gz after perl Makefile.PL.

--- a/Changes
+++ b/Changes
@@ -1,4 +1,7 @@
-0.6 2016-09-11
+0.10 2016-09-30
+  - Build fix for changing repos
+
+0.9 2016-09-11
   - Makefile need to get dependencies
 
 0.8 2016-09-11
